--- a/cell01/ex02/style.css
+++ b/cell01/ex02/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 * {
   padding: 0;
   margin: 0;
+  font-family: "Poppins";
 }
 
 h1 {
+  margin: 1rem 0;
   text-align: center;
 }
 
