--- a/cell01/ex04/style.css
+++ b/cell01/ex04/style.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 * {
+  font-family: "Poppins";
   padding: 0;
   margin: 0;
 }
@@ -22,6 +25,8 @@ img {
 
 a {
   display: block;
+  text-align: center;
+  text-decoration: none;
 }
 
 main {
@@ -34,7 +39,9 @@ main {
   margin: 0 1rem;
 }
 
-h3 {
+h4 {
   text-align: right;
   margin: 5px;
+  font-family: "Mono Space";
+  font-style: italic;
 }
