--- a/cell03/ex00/background.css
+++ b/cell03/ex00/background.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 * {
-  font-family: "Poppins";
-  margin: 0;
   padding: 0;
+  margin: 0;
+  font-family: "Poppins";
 }
-
-.title {
-  text-align: center;
+button {
+  font-size: 1.5rem;
 }
